--- a/package-analytics/main/default/classes/PackageDataExtractJobTest.cls
+++ b/package-analytics/main/default/classes/PackageDataExtractJobTest.cls
@@ -1,3 +1,8 @@
+//-------------------------------------------------------------------------------------------------//
+// This file is part of the Package Analytics project, released under the MIT License.             //
+// See LICENSE file or go to https://github.com/jongpie/PackageAnalytics for full license details. //
+//-------------------------------------------------------------------------------------------------//
+
 /*
   The SObjects `MetadataPackage`, `MetadataPackageVersion`, and `PackageSubscriber` cannot be created or modified in Apex,
   so this test class uses instances of inner classes in `PackageDataExtractJob` to create mock records.
@@ -230,7 +235,7 @@ private class PackageDataExtractJobTest {
   static void runsBatchJobForMetadataPackageWhenOrgIsDevHub() {
     // Integration test - this can only run in dev hubs that have 1+ packages, so use a few guard clauses to see if this test can run
     // Global describe - yuck!
-    if (PackageDataExtractJob.IS_DEV_HUB == false) {
+    if (PackageDataExtractJob.IS_PACKAGING_ORG == false) {
       System.debug(
         LoggingLevel.INFO,
         'Current org does not have the SObject MetadataPackage, skipping integration test'
